--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="static/styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 
 <body onload="updateGameInterval();">
@@ -12,125 +12,125 @@
         <div class="player_div" id="red_player"> <input type="hidden" id="redRank" value="-1"> <input type="hidden" id="redPos" value="0">
             <div class="user_info" id="red_user_info">
                 <p id="redUsername"> </p>
-                <img class="player_pic" id="red_user_pic" src="static/red_user.png">
+                <img class="player_pic" id="red_user_pic" src="/static/red_user.png">
             </div>
 
-            <img class="cup" id="red_cup" src="static/resources/cups/red_cup.png" onclick="clicked_cup(0);">
+            <img class="cup" id="red_cup" src="/static/resources/cups/red_cup.png" onclick="clicked_cup(0);">
             <div id="red_table_div">
                 <div id="playing_red_div">
                     <p class="playing_text" id="red_playing_text">Playing...</p>
                 </div>
                 <div id="red_dice_div">
-                    <img class=red_die_img id="red_die1_img" src="static/resources/peach.png" onmousedown="clicked_die(0, 1);">
-                    <img class=red_die_img id="red_die2_img" src="static/resources/peach.png" onmousedown="clicked_die(0, 2);">
-                    <img class=red_die_img id="red_die3_img" src="static/resources/peach.png" onmousedown="clicked_die(0, 3);">
-                    <img class=red_die_img id="red_die4_img" src="static/resources/peach.png" onmousedown="clicked_die(0, 4);">
-                    <img class=red_die_img id="red_die5_img" src="static/resources/peach.png" onmousedown="clicked_die(0, 5);">
+                    <img class=red_die_img id="red_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(0, 1);">
+                    <img class=red_die_img id="red_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(0, 2);">
+                    <img class=red_die_img id="red_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(0, 3);">
+                    <img class=red_die_img id="red_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(0, 4);">
+                    <img class=red_die_img id="red_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(0, 5);">
                 </div>
             </div>
         </div>
 
         <div class="player_div" id="orange_player"> <input type="hidden" id="orangeRank" value="-1"> <input type="hidden" id="orangePos" value="1">
             <div class="user_info" id="orange_user_info">
-                <img class="player_pic" id="orange_user_pic" src="static/orange_user.png">
+                <img class="player_pic" id="orange_user_pic" src="/static/orange_user.png">
                 <p id="orangeUsername"> </p>
             </div>
 
-            <img class="cup" id="orange_cup" src="static/resources/cups/orange_cup.png" onclick="clicked_cup(1); ">
+            <img class="cup" id="orange_cup" src="/static/resources/cups/orange_cup.png" onclick="clicked_cup(1); ">
             <div id="orange_table_div">
                 <div id="playing_orange_div">
                     <p class="playing_text" id="orange_playing_text">Playing...</p>
                 </div>
                 <div id="orange_dice_div">
-                    <img class=orange_die_img id="orange_die1_img" src="static/resources/peach.png" onmousedown="clicked_die(1, 1);">
-                    <img class=orange_die_img id="orange_die2_img" src="static/resources/peach.png" onmousedown="clicked_die(1, 2);">
-                    <img class=orange_die_img id="orange_die3_img" src="static/resources/peach.png" onmousedown="clicked_die(1, 3);">
-                    <img class=orange_die_img id="orange_die4_img" src="static/resources/peach.png" onmousedown="clicked_die(1, 4);">
-                    <img class=orange_die_img id="orange_die5_img" src="static/resources/peach.png" onmousedown="clicked_die(1, 5);">
+                    <img class=orange_die_img id="orange_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(1, 1);">
+                    <img class=orange_die_img id="orange_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(1, 2);">
+                    <img class=orange_die_img id="orange_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(1, 3);">
+                    <img class=orange_die_img id="orange_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(1, 4);">
+                    <img class=orange_die_img id="orange_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(1, 5);">
                 </div>
             </div>
         </div>
 
         <div class="player_div" id="yellow_player"> <input type="hidden" id="yellowRank" value="-1"> <input type="hidden" id="yellowPos" value="2">
             <div class="user_info" id="yellow_user_info">
-                <img class="player_pic" id="yellow_user_pic" src="static/yellow_user.png">
+                <img class="player_pic" id="yellow_user_pic" src="/static/yellow_user.png">
                 <p id="yellowUsername"> </p>
             </div>
 
-            <img class="cup" id="yellow_cup" src="static/resources/cups/yellow_cup.png" onclick="clicked_cup(2);">
+            <img class="cup" id="yellow_cup" src="/static/resources/cups/yellow_cup.png" onclick="clicked_cup(2);">
             <div id="yellow_table_div">
                 <div id="playing_yellow_div">
                     <p class="playing_text" id="yellow_playing_text">Playing...</p>
                 </div>
                 <div id="yellow_dice_div">
-                    <img class=yellow_die_img id="yellow_die1_img" src="static/resources/peach.png" onmousedown="clicked_die(2, 1);">
-                    <img class=yellow_die_img id="yellow_die2_img" src="static/resources/peach.png" onmousedown="clicked_die(2, 2);">
-                    <img class=yellow_die_img id="yellow_die3_img" src="static/resources/peach.png" onmousedown="clicked_die(2, 3);">
-                    <img class=yellow_die_img id="yellow_die4_img" src="static/resources/peach.png" onmousedown="clicked_die(2, 4);">
-                    <img class=yellow_die_img id="yellow_die5_img" src="static/resources/peach.png" onmousedown="clicked_die(2, 5);">
+                    <img class=yellow_die_img id="yellow_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(2, 1);">
+                    <img class=yellow_die_img id="yellow_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(2, 2);">
+                    <img class=yellow_die_img id="yellow_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(2, 3);">
+                    <img class=yellow_die_img id="yellow_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(2, 4);">
+                    <img class=yellow_die_img id="yellow_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(2, 5);">
                 </div>
             </div>
         </div>
 
         <div class="player_div" id="green_player"> <input type="hidden" id="greenRank" value="-1"> <input type="hidden" id="greenPos" value="3">
             <div class="user_info" id="green_user_info">
-                <img class="player_pic" id="green_user_pic" src="static/green_user.png">
+                <img class="player_pic" id="green_user_pic" src="/static/green_user.png">
                 <p id="greenUsername"> </p>
             </div>
 
-            <img class="cup" id="green_cup" src="static/resources/cups/green_cup.png" onclick="clicked_cup(3);">
+            <img class="cup" id="green_cup" src="/static/resources/cups/green_cup.png" onclick="clicked_cup(3);">
             <div id="green_table_div">
                 <div id="playing_green_div">
                     <p class="playing_text" id="green_playing_text">Playing...</p>
                 </div>
                 <div id="green_dice_div">
-                    <img class=green_die_img id="green_die1_img" src="static/resources/peach.png" onmousedown="clicked_die(3, 1);">
-                    <img class=green_die_img id="green_die2_img" src="static/resources/peach.png" onmousedown="clicked_die(3, 2);">
-                    <img class=green_die_img id="green_die3_img" src="static/resources/peach.png" onmousedown="clicked_die(3, 3);">
-                    <img class=green_die_img id="green_die4_img" src="static/resources/peach.png" onmousedown="clicked_die(3, 4);">
-                    <img class=green_die_img id="green_die5_img" src="static/resources/peach.png" onmousedown="clicked_die(3, 5);">
+                    <img class=green_die_img id="green_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(3, 1);">
+                    <img class=green_die_img id="green_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(3, 2);">
+                    <img class=green_die_img id="green_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(3, 3);">
+                    <img class=green_die_img id="green_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(3, 4);">
+                    <img class=green_die_img id="green_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(3, 5);">
                 </div>
             </div>
         </div>
 
         <div class="player_div" id="blue_player"> <input type="hidden" id="blueRank" value="-1"> <input type="hidden" id="bluePos" value="4">
             <div class="user_info" id="blue_user_info">
-                <img class="player_pic" id="blue_user_pic" src="static/blue_user.png">
+                <img class="player_pic" id="blue_user_pic" src="/static/blue_user.png">
                 <p id="blueUsername"> </p>
             </div>
 
-            <img class="cup" id="blue_cup" src="static/resources/cups/blue_cup.png" onclick="clicked_cup(4);">
+            <img class="cup" id="blue_cup" src="/static/resources/cups/blue_cup.png" onclick="clicked_cup(4);">
             <div id="blue_table_div">
                 <div id="playing_blue_div">
                     <p class="playing_text" id="blue_playing_text">Playing...</p>
                 </div>
                 <div id="blue_dice_div">
-                    <img class=blue_die_img id="blue_die1_img" src="static/resources/peach.png" onmousedown="clicked_die(4, 1);">
-                    <img class=blue_die_img id="blue_die2_img" src="static/resources/peach.png" onmousedown="clicked_die(4, 2);">
-                    <img class=blue_die_img id="blue_die3_img" src="static/resources/peach.png" onmousedown="clicked_die(4, 3);">
-                    <img class=blue_die_img id="blue_die4_img" src="static/resources/peach.png" onmousedown="clicked_die(4, 4);">
-                    <img class=blue_die_img id="blue_die5_img" src="static/resources/peach.png" onmousedown="clicked_die(4, 5);">
+                    <img class=blue_die_img id="blue_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(4, 1);">
+                    <img class=blue_die_img id="blue_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(4, 2);">
+                    <img class=blue_die_img id="blue_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(4, 3);">
+                    <img class=blue_die_img id="blue_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(4, 4);">
+                    <img class=blue_die_img id="blue_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(4, 5);">
                 </div>
             </div>
         </div>
 
         <div class="player_div" id="black_player"> <input type="hidden" id="blackRank" value="-1"> <input type="hidden" id="blackPos" value="5">
             <div class="user_info" id="black_user_info">
-                <img class="player_pic" id="black_user_pic" src="static/black_user.png">
+                <img class="player_pic" id="black_user_pic" src="/static/black_user.png">
                 <p id="blackUsername"> </p>
             </div>
 
-            <img class="cup" id="black_cup" src="static/resources/cups/black_cup.png" onclick="clicked_cup(5);">
+            <img class="cup" id="black_cup" src="/static/resources/cups/black_cup.png" onclick="clicked_cup(5);">
             <div id="black_table_div">
                 <div id="playing_black_div">
                     <p class="playing_text" id="black_playing_text">Playing...</p>
                 </div>
                 <div id="black_dice_div">
-                    <img class=black_die_img id="black_die1_img" src="static/resources/peach.png" onmousedown="clicked_die(5, 1);">
-                    <img class=black_die_img id="black_die2_img" src="static/resources/peach.png" onmousedown="clicked_die(5, 2);">
-                    <img class=black_die_img id="black_die3_img" src="static/resources/peach.png" onmousedown="clicked_die(5, 3);">
-                    <img class=black_die_img id="black_die4_img" src="static/resources/peach.png" onmousedown="clicked_die(5, 4);">
-                    <img class=black_die_img id="black_die5_img" src="static/resources/peach.png" onmousedown="clicked_die(5, 5);">
+                    <img class=black_die_img id="black_die1_img" src="/static/resources/peach.png" onmousedown="clicked_die(5, 1);">
+                    <img class=black_die_img id="black_die2_img" src="/static/resources/peach.png" onmousedown="clicked_die(5, 2);">
+                    <img class=black_die_img id="black_die3_img" src="/static/resources/peach.png" onmousedown="clicked_die(5, 3);">
+                    <img class=black_die_img id="black_die4_img" src="/static/resources/peach.png" onmousedown="clicked_die(5, 4);">
+                    <img class=black_die_img id="black_die5_img" src="/static/resources/peach.png" onmousedown="clicked_die(5, 5);">
                 </div>
             </div>
         </div>
@@ -209,15 +209,15 @@
         <div id="betting_div">
             <div id="count_div">
                 <p class="bet_label" id="count_text">Count</p>
-                <img class="bet_button" id="count_up_button" src="static/resources/arrow_up.png" onclick="count_up();"></img>
+                <img class="bet_button" id="count_up_button" src="/static/resources/arrow_up.png" onclick="count_up();"></img>
                 <p id="count_number">1</p>
-                <img class="bet_button" id="count_down_button" src="static/resources/arrow_down.png" onclick="count_down();"></img>
+                <img class="bet_button" id="count_down_button" src="/static/resources/arrow_down.png" onclick="count_down();"></img>
             </div>
             <div id="face_div">
                 <p class="bet_label" id="face_text">Face</p>
-                <img class="bet_button" id="face_up_button" src="static/resources/arrow_up.png" onclick="face_up();"></img>
+                <img class="bet_button" id="face_up_button" src="/static/resources/arrow_up.png" onclick="face_up();"></img>
                 <p id="face_number">2</p>
-                <img class="bet_button" id="face_down_button" src="static/resources/arrow_down.png" onclick="face_down();"></img>
+                <img class="bet_button" id="face_down_button" src="/static/resources/arrow_down.png" onclick="face_down();"></img>
             </div>
         </div>
         <div id="place_bet_div">
@@ -255,7 +255,7 @@
         <!-- <p id='dudoMessage'></p> -->
     </div>
 
-    <script src="static/perudo_game.js"></script>
+    <script src="/static/perudo_game.js"></script>
 
 </body>
 
