Chaning more file locations

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
         <div class="player_div" id="red_player"> <input type="hidden" id="redRank" value="-1"> <input type="hidden" id="redPos" value="0">
             <div class="user_info" id="red_user_info">
                 <p id="redUsername"> </p>
-                <img class="player_pic" id="red_user_pic" src="/static/red_user.png">
+                <img class="player_pic" id="red_user_pic" src="/static/resources/user_avatars/red_user.png">
             </div>
 
             <img class="cup" id="red_cup" src="/static/resources/cups/red_cup.png" onclick="clicked_cup(0);">
@@ -32,7 +32,7 @@
 
         <div class="player_div" id="orange_player"> <input type="hidden" id="orangeRank" value="-1"> <input type="hidden" id="orangePos" value="1">
             <div class="user_info" id="orange_user_info">
-                <img class="player_pic" id="orange_user_pic" src="/static/orange_user.png">
+                <img class="player_pic" id="orange_user_pic" src="/static/resources/user_avatars/orange_user.png">
                 <p id="orangeUsername"> </p>
             </div>
 
@@ -53,7 +53,7 @@
 
         <div class="player_div" id="yellow_player"> <input type="hidden" id="yellowRank" value="-1"> <input type="hidden" id="yellowPos" value="2">
             <div class="user_info" id="yellow_user_info">
-                <img class="player_pic" id="yellow_user_pic" src="/static/yellow_user.png">
+                <img class="player_pic" id="yellow_user_pic" src="/static/resources/user_avatars/yellow_user.png">
                 <p id="yellowUsername"> </p>
             </div>
 
@@ -74,7 +74,7 @@
 
         <div class="player_div" id="green_player"> <input type="hidden" id="greenRank" value="-1"> <input type="hidden" id="greenPos" value="3">
             <div class="user_info" id="green_user_info">
-                <img class="player_pic" id="green_user_pic" src="/static/green_user.png">
+                <img class="player_pic" id="green_user_pic" src="/static/resources/user_avatars/green_user.png">
                 <p id="greenUsername"> </p>
             </div>
 
@@ -95,7 +95,7 @@
 
         <div class="player_div" id="blue_player"> <input type="hidden" id="blueRank" value="-1"> <input type="hidden" id="bluePos" value="4">
             <div class="user_info" id="blue_user_info">
-                <img class="player_pic" id="blue_user_pic" src="/static/blue_user.png">
+                <img class="player_pic" id="blue_user_pic" src="/static/resources/user_avatars/blue_user.png">
                 <p id="blueUsername"> </p>
             </div>
 
